--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
